sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:12: error: Boolean does not take parameters
        echange(i,(i+ecart))
               ^